--- a/_config.yml
+++ b/_config.yml
@@ -1,34 +1,40 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+title: Nynim.org
+email: tony@nynim.org
+description: >
+  Tony Duckles on programming, photography, and general geekery
+baseurl: ""
+url: "http://nynim.org"
+date_format: "%b %-d, %Y"
+
+# Google services
+google_analytics: UA-6748678-1
+
+# Disqus post comments
+disqus_shortname: nynim
+
+# Social icons
+github_username:  tonyduckles
+twitter_username: tonyduckles
+
+# Octopress 2-style excerpts
+excerpt_separator: "<!-- more -->"
+excerpt_link: "Read more &rarr;"
 
 # Build settings
 markdown: kramdown
 theme: minima
+permalink: /blog/:year/:month/:day/:title/  # Octopress 2-style permalink
+sass:
+  style: compressed
 gems:
-  - jekyll-feed
+  - jekyll-sitemap
+  - octopress-codeblock
+  - octopress-image-tag
+  - octopress-linkblog
+  - octopress-paginate
+  - octopress-quote-tag
+  - octopress-solarized
 exclude:
   - Gemfile
   - Gemfile.lock
