--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   jekyll:
-    image: jekyll/jekyll:pages
+    image: jekyll/jekyll:latest
     command: jekyll serve --watch --incremental
     ports:
       - 4000:4000
