Add more social_links

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,11 @@ disqus_shortname: nynim
 # Social icons
 github_username: tonyduckles
 twitter_username: tonyduckles
+instagram_username: tonyduckles
+lastfm_username: tonyduckles
+pinboard_username: tduckles
+linkedin_username: tonyduckles
+flickr_username: tonyduckles
 
 # UI Text
 text:
