--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ url: "http://nynim.org"
 date_format: "%b %-d, %Y"
 header_pages:
  - blog/index.html
+ - blog/archives.html
  - about.md
  - contact.html
 
@@ -71,6 +72,7 @@ kramdown:
 permalink: /blog/:year/:month/:day/:title/  # Octopress 2-style permalink
 paginate: 10
 paginate_path: "/blog/page:num"
+category_dir: "blog/categories"
 sass:
   style: compressed
 exclude:
