--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ kramdown:
   smart_quotes: ["apos", "apos", "quot", "quot"]  # Disable smart-quotes
 permalink: /blog/:year/:month/:day/:title/  # Octopress 2-style permalink
 paginate: 10
-paginate_path: "/blog/page:num"
+paginate_path: "/blog/page/:num"
 category_dir: "blog/categories"
 sass:
   style: compressed
