--- a/_config.yml
+++ b/_config.yml
@@ -81,10 +81,14 @@ paginate_path: "/blog/page/:num"
 category_dir: "blog/categories"
 sass:
   style: compressed
+include:
+  - .htaccess
+  - .nojekyll
 exclude:
   - Gemfile
   - Gemfile.lock
-  - vendor
+  - vendor/
   - LICENSE.txt
+  - README.md
   - docker-compose.yml
   - bin/
