docker-compose.yml: Create persistent docker volume for BUNDLE_PATH
Create a persistent docker volume for BUNDLE_PATH, for caching the
locally installed gems. This avoids the need to run `bundle install`
for each new `docker-compose run ...` instance.

http://bradgessler.com/articles/docker-bundler/

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,15 @@
-version: '2'
+version: '3'
 services:
   jekyll:
     image: jekyll/jekyll:latest
     command: jekyll serve --watch --incremental
+    environment:
+      BUNDLE_PATH: /srv/bundle
     ports:
       - 4000:4000
       - 4444:4444
     volumes:
       - .:/srv/jekyll
-    container_name: jekyll
+      - data-bundle-cache:/srv/bundle
+volumes:
+  data-bundle-cache:
