_config.yml: Exclude script/ directory from site build

--- a/_config.yml
+++ b/_config.yml
@@ -87,8 +87,8 @@ include:
 exclude:
   - Gemfile
   - Gemfile.lock
+  - script/
   - vendor/
   - LICENSE.txt
   - README.md
   - docker-compose.yml
-  - bin/
