docker-compose.yml: Avoid using docker volume for BUNDLE_PATH
Use the local ./vendor/bundle/ folder for BUNDLE_PATH storage, to avoid
having to depend on a persistent Docker volume. This eliminates some
excessive moving parts from the Docker setup.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,9 @@ services:
   jekyll:
     image: jekyll/jekyll:latest
     environment:
-      BUNDLE_PATH: /srv/bundle
+      BUNDLE_PATH: /srv/jekyll/vendor/bundle
     ports:
       - 4000:4000
       - 4444:4444
     volumes:
       - .:/srv/jekyll
-      - data-bundle-cache:/srv/bundle
-volumes:
-  data-bundle-cache:
