--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-_site
-.sass-cache
+/_site/
+/.sass-cache/
 .jekyll-metadata
-.code-highlighter-cache
-.bundle
+/.code-highlighter-cache/
+/.bundle
+/vendor/
