docker-compose.yml: Use jekyll/jekyll:3.8
Use a fixed [non-"latest"] docker image tag for `jekyll/jekyll`, to help
with bootstrapping new build environments and to give more control over
which jekyll version we're using.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   jekyll:
-    image: jekyll/jekyll:latest
+    image: jekyll/jekyll:3.8
     environment:
       BUNDLE_PATH: /srv/jekyll/vendor/bundle
     ports:
