--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ author: Tony Duckles
 description: >-
   Tony Duckles on programming, photography, and general geekery
 baseurl: ""
-url: "http://nynim.org"
+url: "https://nynim.org"
 date_format: "%b %-d, %Y"
 header_pages:
  - blog/index.html
