Update Google Analytics ID
Use new GA4 Google Analytics ID

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ collections:
 show_social_icons: true
 
 # Google services
-google_analytics: UA-6748678-1
+google_analytics: G-B3RW770KRE
 
 # Disqus post comments
 disqus_shortname: nynim
